[package]
name = "pi-internet-checker"
version = "0.1.0"
authors = ["fjtdg@hotmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = "0.2.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
